fix misaligned aphhoks (#485)

--- a/djangocms_admin_style/sass/components/_tables.scss
+++ b/djangocms_admin_style/sass/components/_tables.scss
@@ -147,9 +147,6 @@
                 vertical-align: middle !important;
                 padding: 1px 5px !important;
             }
-            &.field-app_config {
-                padding: 1px 10px !important;
-            }
             &.original p {
                 font-weight: normal !important;
             }
